<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_settings"
        tools:context=".ui.home.HomeFragment">

    <TextView
            android:text="@string/title_settings"
            android:id="@+id/title_settings"
            android:layout_width="318dp"
            android:layout_height="42dp"
            style="@style/title_semilarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.322" app:layout_constraintVertical_bias="0.032"/>

    <ImageButton
            android:src="@drawable/btn_nav_plus"
            android:backgroundTint="@color/transparent"
            android:layout_width="110dp"
            android:layout_height="110dp" android:id="@+id/btn_add"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginBottom="32dp"/>

    <ScrollView
            android:id="@+id/fondo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="@color/transparent"
            android:layout_margin="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_settings"
            app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/panel"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:backgroundTint="@color/colorHint"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp">

            <TextView
                    android:id="@+id/text_pfp"
                    style="@style/txt_light_small"
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="48dp"
                    android:background="@drawable/textview_background"
                    android:backgroundTint="@color/gris"
                    android:gravity="center_vertical"
                    android:text="@string/txt_pfp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.524"/>
            <TextView
                    android:id="@+id/text_username"
                    style="@style/txt_light_small"
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/textview_background"
                    android:backgroundTint="@color/gris"
                    android:text="@string/txt_username"
                    android:gravity="center_vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.508"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_pfp" />

            <TextView
                    android:id="@+id/text_city"
                    style="@style/txt_light_small"
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/textview_background"
                    android:backgroundTint="@color/gris"
                    android:text="@string/txt_City"
                    android:gravity="center_vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_username" />

            <TextView
                    android:id="@+id/text_psw"
                    style="@style/txt_light_small"
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/textview_background"
                    android:backgroundTint="@color/gris"
                    android:text="@string/txt_changePsw"
                    android:gravity="center_vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_city"/>

            <TextView
                    android:id="@+id/text_signout"
                    style="@style/txt_light_small"
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:background="@drawable/textview_background"
                    android:backgroundTint="@color/gris"
                    android:text="@string/txt_signout"
                    android:gravity="center_vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.524" app:layout_constraintTop_toBottomOf="@+id/text_psw"
                    android:layout_marginTop="20dp"/>

            <com.google.android.material.imageview.ShapeableImageView
                    app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                    android:id="@+id/btn_edit_pfp"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="-15dp"
                    android:clickable="true"
                    app:srcCompat="@drawable/no_image"
                    android:backgroundTint="@color/transparent"
                    android:foreground="@drawable/ripple_button_effect"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="@+id/text_pfp"
                    app:layout_constraintEnd_toEndOf="@+id/text_pfp"
                    app:layout_constraintTop_toTopOf="@+id/text_pfp"
            />

            <EditText
                    android:id="@+id/edit_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="Nom"
                    android:textColorHint="@color/colorHint"
                    android:textAlignment="viewEnd"
                    app:layout_constraintHorizontal_bias="0.6"
                    app:layout_constraintBottom_toBottomOf="@+id/text_username"
                    app:layout_constraintEnd_toEndOf="@+id/text_username"
                    app:layout_constraintTop_toTopOf="@+id/text_username"
                    app:layout_constraintStart_toStartOf="@+id/text_username"/>

            <Button
                    android:id="@+id/btn_confirm_username"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/btn_tick"
                    app:layout_constraintHorizontal_bias="0.95"
                    app:layout_constraintEnd_toEndOf="@+id/text_username"
                    app:layout_constraintBottom_toBottomOf="@+id/text_username"
                    app:layout_constraintTop_toTopOf="@+id/text_username"
                    app:layout_constraintStart_toStartOf="@+id/text_username"/>

            <EditText
                    android:id="@+id/edit_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintHorizontal_bias="0.6"
                    android:hint="Ciutat"
                    android:textColorHint="@color/colorHint"
                    android:textAlignment="viewEnd"
                    app:layout_constraintBottom_toBottomOf="@+id/text_city"
                    app:layout_constraintEnd_toEndOf="@+id/text_city"
                    app:layout_constraintTop_toTopOf="@+id/text_city"
                    app:layout_constraintStart_toStartOf="@+id/text_city"/>

            <Button
                    android:id="@+id/btn_confirm_usercity"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/btn_tick"
                    app:layout_constraintHorizontal_bias="0.95"
                    app:layout_constraintEnd_toEndOf="@+id/text_city"
                    app:layout_constraintBottom_toBottomOf="@+id/text_city"
                    app:layout_constraintTop_toTopOf="@+id/text_city"
                    app:layout_constraintStart_toStartOf="@+id/text_city"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>